<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperd"
    tools:context=".Dividir">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="399dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trialmedium"
            android:text="@string/dividir"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20pt" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:fontFamily="@font/trialmedium"
            android:text="@string/description_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/num1"
                android:layout_width="193dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:fontFamily="@font/trialmedium"
                android:textSize="35pt"
                android:textAlignment="center"
                android:backgroundTint="@color/white"/>

            <EditText
                android:id="@+id/num2"
                android:layout_width="189dp"
                android:layout_height="116dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:fontFamily="@font/trialmedium"
                android:textSize="35pt"
                android:textAlignment="center"
                android:backgroundTint="@color/white"/>

        </LinearLayout>

        <Button
            android:id="@+id/RealizarD"
            android:layout_width="329dp"
            android:layout_height="87dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/green"
            android:elevation="6dp"
            android:fontFamily="@font/trialmedium"
            android:text="@string/realizar"
            android:textSize="8pt" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>